# signac-dashboard

./: .bumpversion  .bumpversion.cfg  .deploy.bash  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .test-deploy.bash  CHANGELOG.md  CONTRIBUTING.md  ContributorAgreement.md  LICENSE.txt  MANIFEST.in  README.md  bitbucket-pipelines.yml  changelog.txt  contributors.txt  make-workspace.py  my_project  pyproject.toml  renovate.json  requirements-test.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test-app.py  test.sh  util
.circleci/: config.yml  deploy.bash
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-oldest-reqs.txt  deploy-pypi.yml  deploy-test-pypi.yml  publish-packages.yml  run-pytest.yml
assets/sass/: _defaults.scss  app.scss
doc/: Makefile  api.rst  conf.py  index.rst  installation.rst  modules.rst  quickstart.rst  requirements.in  requirements.txt  security.rst  signac-dashboard.rst  support.rst
doc/_static/css/: signac-theme.css
examples/cli/: default_dashboard.sh
examples/custom-menu/: dashboard.py
examples/custom-menu/templates/: menu.jinja
examples/custom-modules/: README.md  dashboard.py  init.py
examples/custom-modules/modules/: __init__.py  awesome_module.py
examples/document-editor/: README.md  dashboard.py  init.py
examples/flow-status/: README.md  dashboard.py  init.py  project.py
examples/kitchen-sink/: dashboard.py
examples/minimal/: .gitignore  dashboard.py
examples/online_plots/: README.md  dashboard.py
examples/plots/: README.md  dashboard.py  init.py
examples/plots-matplotlib/: README.md
examples/plots-plotly/: README.md  dashboard.py  init.py
examples/wsgi/: .gitignore  README.md  dashboard.py  gunicorn_serve.sh  init.py
requirements/: requirements-test-py3.10.txt  requirements-test-py3.11.txt  requirements-test-py3.12.txt  requirements-test-py3.13.txt  requirements-test-py3.14.txt  requirements-test.in  requirements-test.txt
signac_dashboard/: __init__.py  __main__.py  dashboard.py  gulpfile.js  module.py  pagination.py  util.py  vdashboard.py  version.py  views.py
signac_dashboard/modules/: __init__.py  document_editor.py  document_list.py  file_list.py  file_opener.py  flow_status.py  image_viewer.py  ipython_display.py  logger.py  navigator.py  notes.py  plot_viewer.py  plotly_viewer.py  plotter.py  project_document.py  project_image_viewer.py  schema.py  schema_display.py  statepoint_editor.py  statepoint_list.py  text_display.py  video_viewer.py
signac_dashboard/static/js/: admin_demo.js  menu-toggle-mobile.js  notes.js  nprogress_config.js
signac_dashboard/static/scss/: _defaults.scss  _nprogress.scss  app.scss
signac_dashboard/templates/: dashboard.html  demo.html  error.html  job.html  job2.html  job_creator.html  job_sidebar.html  jobs.html  jobs_grid.html  jobs_list.html  jobs_tile.html  layout.html  login.html  menu.jinja  pagination.jinja  project_info.html  project_list.html  project_sidebar.html  settings.html  stats.html
signac_dashboard/templates/cards/: document_editor.html  document_list.html  escaped_dict_display.html  file_list.html  file_opener.html  flow_status.html  image_viewer.html  ipython_display.html  logger.html  navigator.html  notes.html  plot_viewer.html  plotly_viewer.html  plotter.html  project_image_viewer.html  statepoint_editor.html  statepoint_list.html  video_viewer.html
signac_dashboard/templates/panels/: document_list.html  (+1 more)
signac_dashboard/vue/: README.md  package-lock.json  package.json
static/: .gitignore
templates/: dashboard.html  job.html  job2.html  jobs.html  layout.html  statepoint.html
tests/: test.py  test_dashboard.py  test_modules.py  test_navigator.py
(+17 files in other folders)
