[bumpversion]
current_version = 0.2.8
commit = True
tag = True
message = Bump up to version {new_version}.

[metadata]
description-file = README.md

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 100
select = E,F,W
ignore = E123,E126,E203,E226,E241,E704,W503,W504

[bumpversion:file:setup.py]

[bumpversion:file:signac_dashboard/version.py]

[bumpversion:file:doc/conf.py]

[tool:pytest]
filterwarnings = 
	ignore:.*SimpleKeyring is deprecated.*:DeprecationWarning
	ignore:.*The doc_filter argument was deprecated.*:DeprecationWarning
